src/test/ui/error-codes/E0657.stderr
error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/E0657.rs:10:31
   |
LL |     -> Box<for<'a> Id<impl Lt<'a>>>
   |                               ^^
   |
note: lifetime declared here
  --> $DIR/E0657.rs:10:12
   |
LL |     -> Box<for<'a> Id<impl Lt<'a>>>
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   = help: See https://github.com/rust-lang/rust/issues/96194 for further details

error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/E0657.rs:20:35
   |
LL |         -> Box<for<'a> Id<impl Lt<'a>>>
   |                                   ^^
   |
note: lifetime declared here
  --> $DIR/E0657.rs:20:16
   |
LL |         -> Box<for<'a> Id<impl Lt<'a>>>
   |                ^^^^^^^^^^^^^^^^^^^^^^^
   = help: See https://github.com/rust-lang/rust/issues/96194 for further details

error[E0657]: `impl Trait` can only capture lifetimes bound at the fn or impl level
  --> $DIR/E0657.rs:10:31
   |
LL |     -> Box<for<'a> Id<impl Lt<'a>>>
   |                               ^^

error[E0657]: `impl Trait` can only capture lifetimes bound at the fn or impl level
  --> $DIR/E0657.rs:20:35
   |
LL |         -> Box<for<'a> Id<impl Lt<'a>>>
   |                                   ^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0657`.
